--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,14 @@ dependencies:
   connectivity: ^0.3.1
   event_bus: ^1.0.1
   shared_preferences: ^0.4.2
+  json_annotation: ^1.1.0
+  sqflite: ^0.12.2+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^0.10.1+1
+  json_serializable: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
